Fixed default github avatars being too big

--- a/static/web/style.css
+++ b/static/web/style.css
@@ -29,6 +29,8 @@ body {
 }
 
 .userbox > img {
+	width: 30px;
+	height: 30px;
 	border-radius: 4px;
 }
 
